--- a/ASL_hparamtunning.ipynb
+++ b/ASL_hparamtunning.ipynb
@@ -19,7 +19,7 @@
         "id": "MJ5VEJmqcjLs"
       },
       "source": [
-        "# Getting the data fro gdrive\r\n",
+        "# Getting the data from gdrive\r\n",
         "\r\n"
       ]
     },
